--- a/angular.json
+++ b/angular.json
@@ -26,14 +26,26 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "allowedCommonJsDependencies": [
-              "leaflet"
+              "leaflet",
+              "leaflet.markercluster",
+              "leaflet-routing-machine"
             ],
             "assets": [
+              {
+                "glob": "**/*",
+                "input": "./node_modules/leaflet/dist/images",
+                "output": "assets/"
+              },
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
               "./node_modules/leaflet/dist/leaflet.css",
+              "./node_modules/leaflet-search/src/leaflet-search.css",
+              "./node_modules/leaflet-control-geocoder/dist/Control.Geocoder.css",
+              "node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css",
+              "node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.css",
+              "node_modules/lrm-graphhopper/examples/index.css",
               "src/styles.scss"
             ],
             "scripts": []
