--- a/package.json
+++ b/package.json
@@ -19,7 +19,17 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@asymmetrik/ngx-leaflet": "^16.0.1",
+    "@asymmetrik/ngx-leaflet-markercluster": "^16.0.0",
+    "@types/leaflet-routing-machine": "^3.2.5",
+    "@types/leaflet.markercluster": "^1.5.2",
+    "graphhopper-js-api-client": "^5.0.2",
     "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^2.4.0",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet-routing-machine": "^3.2.12",
+    "leaflet-search": "^3.0.11",
+    "leaflet.markercluster": "^1.5.3",
+    "lrm-graphhopper": "^1.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
