--- a/angular.json
+++ b/angular.json
@@ -40,6 +40,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/leaflet/dist/leaflet.css",
               "./node_modules/leaflet-search/src/leaflet-search.css",
               "./node_modules/leaflet-control-geocoder/dist/Control.Geocoder.css",
