--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "allowedCommonJsDependencies": [
+              "lodash",
               "leaflet",
               "leaflet.markercluster",
               "leaflet-routing-machine"
